Fix vertical spacing on blog post hexagons

--- a/client/common/sass/blog/_blog-tease.sass
+++ b/client/common/sass/blog/_blog-tease.sass
@@ -5,13 +5,18 @@
 	+media-breakpoint-down(extra-small)
 		flex-direction: column
 
-.blog-tease__hexagon
+.blog-tease__hexagon-wrapper
 	width: 2rem
 	height: auto
 	margin-right: 1rem
 	margin-bottom: 1rem
 	flex-grow: 0
 	flex-shrink: 0
+
+.blog-tease__hexagon
+	position: relative
+	width: 2rem
+	top: -5px
 
 .blog-tease__body
 	flex-grow: 1
